--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,6 @@ spring.datasource.password=1234
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.mvc.pathmatch.matching-strategy=ant-path-matcher
+server.error.include-message=always
+server.error.include-exception=false
+server.error.include-stacktrace=never
